fix visibility of review carousel on desktop, fix trinagle decorator width

--- a/src/scss/blocks/_carousel.scss
+++ b/src/scss/blocks/_carousel.scss
@@ -15,6 +15,14 @@
     &__container {
         font-size: 0;
         white-space: nowrap;
+        overflow: scroll;
+        -ms-overflow-style: none; // IE 10+
+        // overflow: -moz-scrollbars-none; // Firefox
+        height: 110%;
+    }
+
+    &__container::-webkit-scrollbar {
+        display: none; // Safari and Chrome
     }
 
     &__item {
