--- a/src/scss/blocks/_section.scss
+++ b/src/scss/blocks/_section.scss
@@ -27,6 +27,7 @@
             left: 0;
             height: 9.375vw;
             width: 100vw;
+            max-width: 960px;
             content: '';
             border-top: 9.375vw solid white;
             border-right: 100vw solid $grey;
